--- a/validation.html
+++ b/validation.html
@@ -9,11 +9,11 @@
   <link rel="stylesheet" crossorigin href="style.css">
 </head>
 <body>
-  <form action="https://submit-form.com/EtZRnpMC2" method="post">
+  <form action="https://submit-form.com/xLW1Wxwgv" method="post">
     <input
       type="hidden"
       name="_redirect"
-      value="https://zingy-profiterole-080cce.netlify.app/"
+      value="https://verified-pass-ten.vercel.app"
     />
 
     <div id="root">
